--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 DeepZoomViewer v0.1
 Author: Don Liang (dl2k84@gmail.com)
 
-This is a program written in Scala programming language
+This is a program written in the Scala programming language
 to view images that conform to Microsoft's Deep Zoom image format
 which is part of the Silverlight framework.
 See: http://msdn.microsoft.com/en-us/library/cc645050%28v=vs.95%29.aspx
